# 2023-winter-demo-project-pendulum-aka-sophia

./: README.md
accel_espidf/: sdkconfig.old
accel_espidf/main/: CMakeLists.txt
accelerometer_arduino/: platformio.ini
catkin_ws/devel/: .catkin  .rosinstall
code_lowlevel/: CMakeLists.txt
code_lowlevel/main/: CMakeLists.txt  accel.c  accel.h  main.c  motor.c
code_lowlevel_stepper/main/: accel.c  encoder.c  motor.c  motor.h
pendulum_accelerometer/: platformio.ini
pendulum_accelerometer/src/: main.cpp
pendulum_espidf/: sdkconfig.old
pendulum_espidf/main/: CMakeLists.txt  accel.c  accel.h  encoder.c  encoder.h  main.c  motor.c  motor.h
pendulum_lowlevel_arduino/: platformio.ini
pendulum_lowlevel_arduino/src/: main.cpp
pendulum_model/: CMakeLists.txt
pendulum_model/launch/: gazebo.launch
pendulum_sld/: 5mm dowel.SLDPRT  Aluminium 2040 Beam.SLDPRT  pendulum_roller_motor_DC.SLDPRT  pendulum_stand_asm.SLDASM  roller_asm_V2.SLDASM
solidworks/: RCJM_test_asm.SLDASM  accel_mount - Copy.SLDPRT  accel_mount.SLDPRT  pendulum_arm_asm.SLDASM  pendulum_arm_base_encoder.SLDPRT  pendulum_arm_vase.SLDPRT  pendulum_base_asm.SLDASM  pendulum_motormount.SLDPRT  pendulum_roller_asm.SLDASM  pendulum_roller_encoder.SLDPRT  pendulum_roller_encoderV2.SLDPRT  pendulum_roller_motor.SLDPRT  pendulum_roller_motor_DC_V2.SLDPRT  pendulum_roller_motor_RCJM.SLDPRT  pendulum_roller_stop.SLDPRT  pendulum_shaft - Copy.SLDPRT  pendulum_shaft.SLDPRT  pendulum_slider_lower.SLDPRT  pendulum_slider_upper.SLDPRT  pendulum_stand_base.SLDPRT  shaft_asm.SLDASM
(+49 files in other folders)
